Fixed text-overflow on toolbar title. #MBL-10864

--- a/content/css/themes/crm/toolbar.less
+++ b/content/css/themes/crm/toolbar.less
@@ -32,6 +32,7 @@
     padding: 0;
     text-align: center;
     text-overflow: ellipsis;
+    overflow: hidden;
     white-space: nowrap;
 
     position: absolute;
